--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
+    <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
   </head>
   <body class="page">
     <header class="header decorated-zone">
+      <div class="rec">rec</div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -34,7 +42,200 @@
           </li>
         </ul>
       </nav>
+      <h1 class="header_title">no focus</h1>
+      <p class="header_about bg_color_titles">
+        Что делать, когда не можешь делать ничего <br />
+        Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+      </p>
     </header>
+    <main class="main">
+      <section class="questions-and-answers">
+        <h3 class="main_title">Почему сосредоточиться так сложно</h3>
+        <ul class="main_content_list">
+          <li class="main_content_list_words">
+            <h4 class="subtitle bg_color_titles">Многозадачность</h4>
+            <p class="paragraph">
+              Особенно сложно сосредоточиться, когда задач много и все они —
+              важные. Где же легендарная многозадачность, когда она так нужна
+              вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+              её просто не существует. Исследователи <a href="#">выяснили</a>,
+              что мозгу тяжело концентрироваться даже на двух делах
+              одновременно. А когда в поле внимания попадает несколько важных
+              задач, организм паникует и выделяет кортизол и адреналин —
+              «гормоны стресса». Из-за этого мы работаем невнимательно:
+              ошибаемся и быстро устаём.
+            </p>
+          </li>
+          <li class="main_content_list_words">
+            <h4 class="subtitle bg_color_titles">Дофамин</h4>
+            <p class="paragraph">
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+              нашей невозможности сосредоточиться замешана и полная
+              противоположность стрессу — дофамин. Это вещество участвует в
+              системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
+              от важной задачи на что-то более «приятное» для мозгов. Например,
+              смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
+              чувствуем удовольствие. Получается замкнутый круг: чем больше
+              отвлекаешься, тем больше удовольствия получаешь.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="questions-and-answers different_section">
+        <h3 class="main_title different_title">
+          Что снижает концентрацию внимания?
+        </h3>
+        <ul class="main_content_list different_content_list">
+          <li class="main_content_list_words">
+            <h4 class="subtitle bg_color_titles">Многозадачность</h4>
+            <p class="paragraph">
+              Как концентрация может снижаться из-за… концентрации? Любая
+              стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+              наш мозг постоянно «сканировать» окружающую среду на предмет
+              опасности. Например, читать новости вместо работы. Но быть
+              собранными всё время — невозможно. Концентрация — мышца, и она
+              может не выдержать, если не давать ей отдохнуть.
+            </p>
+          </li>
+          <li class="main_content_list_words">
+            <h4 class="subtitle bg_color_titles">Еда</h4>
+            <p class="paragraph">
+              «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+              доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+              эта энергия также быстро, как и приходит. А мы в результате
+              попадаем на «углеводные качели»: как только действие «быстрых
+              углеводов» заканчивается, мы чувствуем усталость и сонливость. И
+              хотим ещё больше быстрых углеводов.
+            </p>
+          </li>
+          <li class="main_content_list_words">
+            <h4 class="subtitle bg_color_titles">Гаджеты</h4>
+            <p class="paragraph">
+              Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+              наушниках — подкаст, а на компьютере фоном — ещё и видео с
+              забавными утятами. В результате мозг пытается переключиться с
+              одной задачи на другую — и просто не может. А чтобы вернуться к
+              состоянию полной концентрации, человеку в среднем нужно 20 минут.
+              Вот и получается, что чем больше времени мы проводим в гаджетах,
+              тем больше времени затем нужно, чтобы вернуться к работе.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="questions-and-answers">
+        <h3 class="main_title">
+          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+          секунд)
+        </h3>
+        <ul class="main_content_list">
+          <li class="main_content_list_words">
+            <h4 class="subtitle different_subtitle bg_color_titles">
+              5 простых (на самом деле не очень) советов
+            </h4>
+            <h5 class="another_subtitle bg_color_titles">
+              Представьте небо и облака
+            </h5>
+            <p class="paragraph">
+              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+              успокоиться. Ведь часто именно тревожные мысли о сложных задачах
+              как раз и мешают эти сложные задачи делать. В такие моменты можно
+              закрыть глаза и представить, что чистое небо — это вы, а облака —
+              тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+              где-то там, за тучами, и никуда не денется. Это упражнение поможет
+              вернуться в настоящий момент, а не волноваться о потенциальных
+              проблемах из будущего.
+            </p>
+          </li>
+          <li class="main_content_list_words">
+            <h5 class="another_subtitle bg_color_titles">Включите музыку</h5>
+            <p class="paragraph">
+              Но не любую, и не любимую. Любимая может быть связана с сильными
+              положительными эмоциями, которые тоже очень сильно отвлекают.
+              Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+              попробовать включить плейлист в «белым шумом» или нейромузыкой.
+            </p>
+          </li>
+          <li class="main_content_list_words">
+            <h5 class="another_subtitle bg_color_titles">Прогуляйтесь</h5>
+            <p class="paragraph">
+              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+              <a href="#">показал</a>, что созерцание природы повышает
+              концентрацию, в то время как после просмотра городских пейзажей
+              она наоборот понижается. Можно совместить прогулку с физическими
+              упражнениями или бегом — так в мозг поступит ещё больше кислорода
+              и он будет лучше работать. Но и простая двадцатиминутная прогулка
+              — тоже отличный вариант.
+            </p>
+          </li>
+          <li class="main_content_list_words">
+            <h5 class="another_subtitle bg_color_titles">Хорошо ешьте</h5>
+            <p class="paragraph">
+              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+              которые препятствуют резким скачкам сахара в крови. Например, с
+              высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+              чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+            </p>
+          </li>
+          <li class="main_content_list_words">
+            <h5 class="another_subtitle bg_color_titles">Читайте</h5>
+            <p class="paragraph">
+              Настоящие бумажные книги. Это правда помогает с концентрацией:
+              чтобы прочитать пост в соцсети, достаточно нескольких минут или
+              даже секунд. А вот интересная книга способна затянуть и на
+              несколько часов и круто тренирует направленное внимание.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="main_content_images">
+        <h4 class="subtitle bg_color_titles">А можно в картинках?</h4>
+        <ul class="list_images">
+          <li class="sunset">
+            <img
+              class="images sunset"
+              loading="lazy"
+              src="./images/sunset.png"
+              alt="Закат"
+            />
+          </li>
+          <li class="icecream">
+            <img
+              class="images icecream"
+              loading="lazy"
+              src="./images/ice-cream.png"
+              alt="Мороженное"
+            />
+          </li>
+          <li class="tape">
+            <img
+              class="images tape"
+              loading="lazy"
+              src="./images/tape.png"
+              alt="Кассета"
+            />
+          </li>
+          <li class="books">
+            <img
+              class="images books"
+              loading="lazy"
+              src="./images/books.png"
+              alt="Книги"
+            />
+          </li>
+          <li class="street1">
+            <img
+              class="images street"
+              loading="lazy"
+              src="./images/street.png"
+              alt="Улица"
+            />
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <h2 class="footer_title decorated-zone">focus</h2>
+    </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
