--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
     </header>
     <main class="main">
       <section class="questions-and-answers">
-        <h3 class="main_title">Почему сосредоточиться так сложно</h3>
+        <h2 class="main_title">Почему сосредоточиться так сложно</h2>
         <ul class="main_content_list">
           <li class="main_content_list_words">
-            <h4 class="subtitle bg_color_titles">Многозадачность</h4>
+            <h3 class="subtitle bg_color_titles">Многозадачность</h3>
             <p class="paragraph">
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
-              её просто не существует. Исследователи <a href="#">выяснили</a>,
+              её просто не существует. Исследователи <a href="https://dana.org/article/multicosts-of-multitasking/" target="_blank">выяснили</a>,
               что мозгу тяжело концентрироваться даже на двух делах
               одновременно. А когда в поле внимания попадает несколько важных
               задач, организм паникует и выделяет кортизол и адреналин —
@@ -68,7 +68,7 @@
             </p>
           </li>
           <li class="main_content_list_words">
-            <h4 class="subtitle bg_color_titles">Дофамин</h4>
+            <h3 class="subtitle bg_color_titles">Дофамин</h3>
             <p class="paragraph">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
               нашей невозможности сосредоточиться замешана и полная
@@ -83,12 +83,12 @@
         </ul>
       </section>
       <section class="questions-and-answers different_section">
-        <h3 class="main_title different_title">
+        <h2 class="main_title different_title">
           Что снижает концентрацию внимания?
-        </h3>
+        </h2>
         <ul class="main_content_list different_content_list">
           <li class="main_content_list_words">
-            <h4 class="subtitle bg_color_titles">Многозадачность</h4>
+            <h3 class="subtitle bg_color_titles">Многозадачность</h3>
             <p class="paragraph">
               Как концентрация может снижаться из-за… концентрации? Любая
               стрессовая ситуация (и резко меняющийся мир в целом) заставляет
@@ -99,7 +99,7 @@
             </p>
           </li>
           <li class="main_content_list_words">
-            <h4 class="subtitle bg_color_titles">Еда</h4>
+            <h3 class="subtitle bg_color_titles">Еда</h3>
             <p class="paragraph">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
               доставляют в мозг энергию и помогают ему лучше работать. Но уходит
@@ -110,7 +110,7 @@
             </p>
           </li>
           <li class="main_content_list_words">
-            <h4 class="subtitle bg_color_titles">Гаджеты</h4>
+            <h3 class="subtitle bg_color_titles">Гаджеты</h3>
             <p class="paragraph">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
               наушниках — подкаст, а на компьютере фоном — ещё и видео с
@@ -124,18 +124,18 @@
         </ul>
       </section>
       <section class="questions-and-answers">
-        <h3 class="main_title">
+        <h2 class="main_title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
-        </h3>
+        </h2>
         <ul class="main_content_list">
           <li class="main_content_list_words">
-            <h4 class="subtitle different_subtitle bg_color_titles">
+            <h3 class="subtitle different_subtitle bg_color_titles">
               5 простых (на самом деле не очень) советов
-            </h4>
-            <h5 class="another_subtitle bg_color_titles">
+            </h3>
+            <h4 class="another_subtitle bg_color_titles">
               Представьте небо и облака
-            </h5>
+            </h4>
             <p class="paragraph">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
               успокоиться. Ведь часто именно тревожные мысли о сложных задачах
@@ -148,7 +148,7 @@
             </p>
           </li>
           <li class="main_content_list_words">
-            <h5 class="another_subtitle bg_color_titles">Включите музыку</h5>
+            <h4 class="another_subtitle bg_color_titles">Включите музыку</h4>
             <p class="paragraph">
               Но не любую, и не любимую. Любимая может быть связана с сильными
               положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -157,10 +157,10 @@
             </p>
           </li>
           <li class="main_content_list_words">
-            <h5 class="another_subtitle bg_color_titles">Прогуляйтесь</h5>
+            <h4 class="another_subtitle bg_color_titles">Прогуляйтесь</h4>
             <p class="paragraph">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-              <a href="#">показал</a>, что созерцание природы повышает
+              <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank">показал</a>, что созерцание природы повышает
               концентрацию, в то время как после просмотра городских пейзажей
               она наоборот понижается. Можно совместить прогулку с физическими
               упражнениями или бегом — так в мозг поступит ещё больше кислорода
@@ -169,7 +169,7 @@
             </p>
           </li>
           <li class="main_content_list_words">
-            <h5 class="another_subtitle bg_color_titles">Хорошо ешьте</h5>
+            <h4 class="another_subtitle bg_color_titles">Хорошо ешьте</h4>
             <p class="paragraph">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
@@ -178,7 +178,7 @@
             </p>
           </li>
           <li class="main_content_list_words">
-            <h5 class="another_subtitle bg_color_titles">Читайте</h5>
+            <h4 class="another_subtitle bg_color_titles">Читайте</h4>
             <p class="paragraph">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или
@@ -189,7 +189,7 @@
         </ul>
       </section>
       <section class="main_content_images">
-        <h4 class="subtitle bg_color_titles">А можно в картинках?</h4>
+        <h3 class="subtitle bg_color_titles">А можно в картинках?</h3>
         <ul class="list_images">
           <li class="sunset">
             <img
@@ -235,7 +235,7 @@
       </section>
     </main>
     <footer>
-      <h2 class="footer_title decorated-zone">focus</h2>
+      <h5 class="footer_title decorated-zone">focus</h5>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
